--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "1.0.0",
   "main": "bin/index.js",
   "type": "module",
-  "bin": {  
-    "springlizr": "./bin/index.js"  
+  "bin": {
+    "springlizr": "bin/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["spring", "spring-boot", "cli", "generator", "initializr", "java"],
+  "keywords": [
+    "spring",
+    "spring-boot",
+    "cli",
+    "generator",
+    "initializr",
+    "java"
+  ],
   "author": "toarchie",
   "license": "ISC",
   "description": "A CLI tool to generate Spring Boot projects using Spring Initializr",
